--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li>
                 <!--This is a link, the href value should contain the url or relative path to a page. / means the root folder of the directory structure-->
-                <a href="/">Title of Project</a>
+                <a href="#">Title of Project</a>
             </li>
             <li>
                 <!-- Keep adding as many new list items with links as you need-->
@@ -31,7 +31,7 @@
         <!-- Change the href attribute value from / to the url to your project -->
         <ul>
             <li>
-                <a href="/">Week 1: Hypertext Concrete Poem</a>
+                <a href="https://zyy1346.github.io/Poem/">Week 1: Hypertext Concrete Poem</a>
             </li>
         </ul>
 
