--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--This week we are keeping things very simple, please do not add anything extra, no CSS styling etc.-->
 
         <!--Change to your full name below-->
-        <h1>Yanyu Zhang</h1>
+        <h1>Yanyu Z</h1>
 
         <h3>Term 1</h3>
 
@@ -19,7 +19,7 @@
         <ul>
             <li>
                 <!--This is a link, the href value should contain the url or relative path to a page. / means the root folder of the directory structure-->
-                <a href="https://vimeo.com/manage/videos/780822244"></a>
+                <a href="https://vimeo.com/manage/videos/780822244">Avanlanche</a>
             </li>
             <li>
                 <!-- Keep adding as many new list items with links as you need-->
