--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <ul>
             <li>
                 <!--This is a link, the href value should contain the url or relative path to a page. / means the root folder of the directory structure-->
-                <a href="https://vimeo.com/manage/videos/780822244">Avanlanche</a>
+                <a href="#">Avanlanche</a>
             </li>
             <li>
                 <!-- Keep adding as many new list items with links as you need-->
+                <a href="https://vimeo.com/manage/videos/780822244">Avanlanche</a>
             </li>
         </ul>
 
