--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--This week we are keeping things very simple, please do not add anything extra, no CSS styling etc.-->
 
         <!--Change to your full name below-->
-        <h1>Yanyu Z</h1>
+        <h1>Yanyu Zhang</h1>
 
         <h3>Term 1</h3>
 
