--- a/html-demo-page/index.html
+++ b/html-demo-page/index.html
@@ -21,7 +21,7 @@
         </nav>
         <header>
             <h1>Demo page</h1>
-            <p>Please don't include this in your portfolio.</p> 
+            //<p>Please don't include this in your portfolio.</p> 
             <p>This is just a page of some demonstrations of how to include various other media, especially if you just want to document a project quickly instead of hosting the code online.</p>
         </header>
 
