--- a/index.html
+++ b/index.html
@@ -14,38 +14,30 @@
     <body>
 
         <header>
-            <h1>My Name</h1>
+            <h1>Yanyu Zhang</h1>
 
         </header>
 
         <main>
-            <h3>Term 1</h3>
-            <section class="flex-container">
-                <div class="flex-item"> 
-                    <a href="./html-demo-page">
-                        <h4>Demo Page</h4>
-                    </a>
-                </div>
-            </section>
 
             <h3>Term 2</h3>
             <section class="flex-container">
 
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/hypertext-concrete-poetry/">
+                    <a href="https://zyy1346.github.io/Poem/">
                         <h4>1. Hypertext Concrete Poem</h4>
                     </a>
                 </div>
          
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/simple-responsive-3D/">
-                        <h4>2. Simple Responsive p5 Code Example </h4>
+                    <a href="https://zyy1346.github.io/the-Illusion-of-Life/">
+                        <h4>2.  the Illusion of Life </h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a href="#">
-                        <h4>3.</h4>
+                    <a href="https://zyy1346.github.io/Make-or-Scrape/">
+                        <h4>3.Make or Scrape</h4>
                     </a>
                 </div>
 
